tempfile/auto_impl/tests/compile-fail/attr_on_enum.stderr
error: expected `trait`
 --> tests/compile-fail/attr_on_enum.rs:5:1
  |
5 | enum Foo {
  | ^^^^
